# repl_calculator

./: .env  .gitignore  .pylintrc  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/calculator/: __init__.py  calculation.py  history.py  operations.py
app/commands/: __init__.py
app/file_manager/: __init__.py
app/plugins/add/: __init__.py
app/plugins/clear_history/: __init__.py
app/plugins/delete_history/: __init__.py
app/plugins/divide/: __init__.py
app/plugins/exit/: __init__.py
app/plugins/load_history/: __init__.py
app/plugins/menu/: __init__.py
app/plugins/multiply/: __init__.py
app/plugins/save_history/: __init__.py
app/plugins/show_history/: __init__.py
app/plugins/subtract/: __init__.py
data/: history.csv
tests/: conftest.py  test_app.py  test_calculation.py  test_calculator.py  test_commands.py  test_file_manager.py  test_history.py  test_operation.py
