[tool.poetry]
name = "repl-calculator"
version = "0.1.0"
description = "A simple REPL Calculator"
authors = ["kadeem-lewis <email@kadeemlewis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
pylint = "^3.3.1"
black = "^24.10.0"
pandas = "^2.2.3"
pytest-pylint = "^0.21.0"
pytest-cov = "^5.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
